Project

General

Profile

Actions

Bug #38899

closed

mgr: handle_conf_change - broken locking

Added by xie xingguo about 5 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
Normal
Assignee:
Category:
-
Target version:
% Done:

0%

Source:
Community (dev)
Tags:
Backport:
nautilus,mimic,luminous
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

The is_locked_by_me() is only meant to be safe if you know you hold the lock. It's meant to be used in an assertion.


Related issues 3 (0 open3 closed)

Copied to Ceph - Backport #38962: luminous: DaemonServer::handle_conf_change - broken lockingResolvedNathan CutlerActions
Copied to Ceph - Backport #38963: mimic: DaemonServer::handle_conf_change - broken lockingResolvedNathan CutlerActions
Copied to Ceph - Backport #38964: nautilus: DaemonServer::handle_conf_change - broken lockingResolvedPrashant DActions
Actions #1

Updated by Mykola Golub about 5 years ago

  • Pull request ID set to 27144
Actions #2

Updated by Mykola Golub about 5 years ago

  • Status changed from New to Fix Under Review
Actions #3

Updated by xie xingguo about 5 years ago

  • Pull request ID changed from 27144 to 27184
Actions #4

Updated by Sage Weil about 5 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport set to nautilus, mimic, luminous
Actions #5

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38962: luminous: DaemonServer::handle_conf_change - broken locking added
Actions #6

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38963: mimic: DaemonServer::handle_conf_change - broken locking added
Actions #7

Updated by Nathan Cutler about 5 years ago

  • Copied to Backport #38964: nautilus: DaemonServer::handle_conf_change - broken locking added
Actions #8

Updated by Patrick Donnelly about 5 years ago

  • Project changed from Ceph to mgr
  • Subject changed from DaemonServer::handle_conf_change - broken locking to mgr: handle_conf_change - broken locking
  • Target version set to v15.0.0
  • Start date deleted (03/23/2019)
  • Backport changed from nautilus, mimic, luminous to nautilus,mimic,luminous
  • Affected Versions deleted (v15.0.0)
Actions #9

Updated by Nathan Cutler over 4 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved".

Actions

Also available in: Atom PDF